# fraud-detection-explainable-ai

./: .env.example  .gitignore  PROJECT_CONTEXT.md  README.md  notes.md  pyproject.toml  requirements.txt
app/: streamlit_app.py
notebooks/: 00_data_sanity_check.ipynb  01_eda.ipynb  02_label_audit.ipynb  03_feature_engineering.ipynb  04_modelling.ipynb  05_evaluation.ipynb
src/: data_loader.py  models.py
src/fraud/: data_loader.py  evaluation.py  models.py  tasks.py
