[project]
name = "fraud-detector"
version = "0.1.0"
description = "Fraud detection portfolio project on the ULB Credit Card Fraud dataset."
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = []

[project.scripts]
eda = "fraud.tasks:eda"
test = "fraud.tasks:test"
lint = "fraud.tasks:lint"
fmt = "fraud.tasks:fmt"

[dependency-groups]
dev = [
    "ruff>=0.6",
    "pytest>=8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fraud"]
